Update comment